--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,223 +1,136 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,600,700);
 
 body {
-  padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
+  font:14px/1.5 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#F6F6F6;
   font-weight:300;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#F6F6F6;
   margin:0 0 20px;
+
 }
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
 }
-
-h1, h2, h3 {
-  line-height:1.1;
+/*CHOP NOT SLOP*/
+.blended{  
+  mix-blend-mode: overlay;
 }
-
+/*TEXT STYLES YABISH*/
 h1 {
-  font-size:28px;
+  font-size: 60px;
+  color: #F6F6F6;
+  line-height: 80px;
+  font-weight: 600;
+  text-transform: uppercase;
+
 }
 
 h2 {
-  color:#393939;
+  font-size: 40px;
+  color: #F6F6F6;
+  letter-spacing: 1.33px;
+  line-height: 55px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
-
-h3, h4, h5, h6 {
-  color:#494949;
+h2.tag{
+  font-size: 35px;
+  color: #F6F6F6;
+  letter-spacing: 1.2px;
+  line-height: 48px;
+  font-weight: 200;
 }
-
+h3{
+  font-size: 35px;
+  color: #F6F6F6;
+  letter-spacing: 1.2px;
+  line-height: 49px;
+}
+h4{
+  font-size: 30px;
+  color: #F6F6F6;
+  letter-spacing: 0.93px;
+  line-height: 38px;
+  font-weight: 400;
+}
+h4.caps{
+  text-transform: uppercase;
+  font-weight: 200;
+}
+h5{
+  font-size: 30px;
+  color: #F6F6F6;
+  letter-spacing: 0.93px;
+  line-height: 38px;
+}
+p{
+  font-size: 24px;
+  color: #063D50;
+  line-height: 32px;
+}
 a {
-  color:#39c;
   font-weight:400;
   text-decoration:none;
 }
 
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
+.button{
+  background: #00A3DA;
+  border-radius: 12px;
+  font-size: 30px;
+  color: #F6F6F6;
+  line-height: 38px;
+  padding-top:25px;
+  padding-bottom: 25px;
+  text-align: center;
 }
+.button#login{
+  width: 20%;
+  text-transform: uppercase;
+  margin: 10% auto;
 
-.wrapper {
-  width:860px;
-  margin:0 auto;
 }
-
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+.hero{
+  background: url('../images/hero.png') no-repeat;
+  width: 100%;
+  height: 100vh;
+  padding-top: 2%;
+  padding-left: auto;
+  padding-right: auto;
 }
+.row{
+    margin-left: 5%;
+    margin-right: 5%;
 
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
-  font-size:12px;
 }
-
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
+#hero-text{
+  margin-top: 5%;
+  text-align: center;
 }
-
-table {
-  width:100%;
-  border-collapse:collapse;
+.nav{
+  float: right;
+  margin-top: -10%;
 }
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+.nav h4{
+  float: left;
+  margin-left: 40px;
 }
-
-dt {
-  color:#444;
-  font-weight:700;
+.break {
+  background: url('../images/break.svg') no-repeat top left;
+  width: 100%;
+  max-height: 100px;
+  margin-top: -100px;
+  z-index: 999;
 }
-
-th {
-  color:#444;
+hr{
+  width: 50%;
+  opacity: 0.5;
 }
-
-img {
-  max-width:100%;
-}
-
-header {
-  width:270px;
-  float:left;
-  position:fixed;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-  
-  padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
-
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-}
-
-@media print, screen and (max-width: 960px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-  
-  header {
-    padding-right:320px;
-  }
-  
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-}
-
+/*MEDIA QUERIES*/
 @media print, screen and (max-width: 720px) {
   body {
     word-wrap:break-word;
@@ -252,4 +165,64 @@ footer {
     font-size:12pt;
     color:#444;
   }
+}
+
+
+
+/*ANIMATIONS*/
+@-webkit-keyframes hrgrow {
+  0%   { 
+    opacity: 0;
+    width: 0%;
+   }
+  100% { 
+    opacity: .5; width: 50%;
+   }
+}
+@-moz-keyframes hrgrow {
+  0%   { 
+    opacity: 0;
+    width: 0%;
+   }
+  100% { 
+    opacity: .5; width: 50%;
+   }
+}
+@-o-keyframes hrgrow{
+  0%   { 
+    opacity: 0;
+    width: 0%;
+   }
+  100% { 
+    opacity: .5; width: 50%;
+   }
+}
+@keyframes hrgrow {
+  0%   { 
+    opacity: 0;
+    width: 0%;
+   }
+  100% { 
+    opacity: .5; width: 50%;
+   }
+}
+hr {
+  -webkit-animation: hrgrow 2s ;
+  -moz-animation:    hrgrow 2s ;
+  -o-animation:      hrgrow 2s ;
+  animation:         hrgrow 2s ;
+}
+.delay1{
+ -webkit-animation-delay:1s;
+  animation-delay:1s;
+
+}
+.delay2{ 
+ -webkit-animation-delay:2s;
+ animation-delay:2s;
+}
+
+.delay3{ 
+ -webkit-animation-delay:3s;
+ animation-delay:3s;
 }
