--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,7 @@
 body {
   font:14px/1.5 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#F6F6F6;
-  font-weight:300;
+  font-weight:200;
   margin: 0;
 }
 
@@ -33,7 +33,7 @@ h1 {
 h2 {
   font-size: 40px;
   color: #F6F6F6;
-  letter-spacing: 1.33px;
+  letter-spacing: 2px;
   line-height: 55px;
   font-weight: 600;
   text-transform: uppercase;
@@ -50,6 +50,7 @@ h3{
   color: #F6F6F6;
   letter-spacing: 1.2px;
   line-height: 49px;
+  font-weight: 200;
 }
 h4{
   font-size: 30px;
@@ -67,6 +68,7 @@ h5{
   color: #F6F6F6;
   letter-spacing: 0.93px;
   line-height: 38px;
+  font-weight: 100;
 }
 p{
   font-size: 24px;
@@ -122,14 +124,33 @@ a {
 .break {
   background: url('../images/break.svg') no-repeat top left;
   width: 100%;
-  max-height: 100px;
+  height: 200px;
   margin-top: -100px;
   z-index: 999;
+  padding-top: 100px;
+}
+.break h5{
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 50px;
+
 }
 hr{
   width: 50%;
   opacity: 0.5;
 }
+
+.pix{
+  background: url('../images/pix-section-bg.png');
+  width: 100%;
+  height: 500px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+
+
 /*MEDIA QUERIES*/
 @media print, screen and (max-width: 720px) {
   body {
