--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -53,7 +53,7 @@ h3{
   font-weight: 200;
 }
 h4{
-  font-size: 30px;
+  font-size: 26px;
   color: #F6F6F6;
   letter-spacing: 0.93px;
   line-height: 38px;
@@ -140,13 +140,16 @@ hr{
   width: 50%;
   opacity: 0.5;
 }
-
-.pix{
-  background: url('../images/pix-section-bg.png');
+.section{
   width: 100%;
   height: 500px;
   text-align: center;
   padding-top: 50px;
+  padding-bottom: 50px;
+}
+.pix{
+  background: url('../images/pix-section-bg.png');
+
 }
 
 
